--- a/SkillTimers.ini
+++ b/SkillTimers.ini
@@ -3,7 +3,18 @@ Update=1000
 DynamicWindowSize=1
 AccurateText=1
 OnRefreshAction=[!CommandMeasure MeasureLaunchAHK "Initialize()"]
-OnRefreshAction=[!CommandMeasure MeasureLaunchAHK "Initialize()"][!ActivateConfig "NomeDaSkin\SideSkin" "SideSkin.ini"]
+
+[MeasureLoadSideSkin]
+Measure=Calc
+Formula=1
+OnUpdateAction=[!ActivateConfig "SkillTimer\SkillCooldown" "SkillCooldown.ini"][!SetOption "MeasureLoadSideSkin" "OnUpdateAction" ""]
+DynamicVariables=1
+
+[MeasureLoadSideSkin2] 
+Measure=Calc
+Formula=1
+OnUpdateAction=[!ActivateConfig "SkillTimer\SideSkin" "SideSkin.ini"][!SetOption "MeasureLoadSideSkin2" "OnUpdateAction" ""]
+DynamicVariables=1
 
 [Variables]
 ImagePath=#@#Images\
